--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
-  language: node_js
-  node_js:
-    - "12"
-  before_script:
-    - npm install
-  script: npm run build
-  deploy:
-    local-dir: dist/collegues-front
-    provider: pages
-    skip-cleanup: true
-    github-token: $GITHUB_TOKEN == Set in travis-ci.org dashboard, marked secure
-    on:
-      branch: master
-  notifications:
-    email: false
+before_install:
+  - git submodule update --init --recursive
+language: node_js
+node_js:
+  - "14"
+before_script:
+  - "npm install"
+deploy:
+  provider: pages
+  github-token: $GITHUB_TOKEN
+  local-dir: dist/collegues-front
+  skip-cleanup: true
+  on:
+    branch: main
+notifications:
+  email: false
+script: "npm run build"
